--- a/index.html
+++ b/index.html
@@ -1,273 +1,329 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Essential Meta Tags -->
   <meta charset="UTF-8" />
-  <meta name="description" content="Hoover Art - The Fusion of Nature, Fantasy, and Feminine Beauty" />
+  <meta
+    name="description"
+    content="Hoover Art - The Fusion of Nature, Fantasy, and Feminine Beauty"
+  />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hoover Art - The Fusion of Nature, Fantasy, and Feminine Beauty</title>
 
+  <!-- Example Fonts (You can replace with your own premium fonts) -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;500&display=swap"
+    rel="stylesheet"
+  />
+
+  <!-- Styles -->
   <style>
-    /* Basic Reset & Typography */
+    :root {
+      --color-background: #000000;
+      --color-foreground: #ffffff;
+      --color-accent: #ffd700; /* Gold accent */
+      --font-primary: 'Poppins', sans-serif;
+      --font-secondary: 'Playfair Display', serif;
+      --transition-speed: 0.3s;
+    }
+
     * {
-      margin: 0; 
+      margin: 0;
       padding: 0;
       box-sizing: border-box;
+      scroll-behavior: smooth;
     }
+
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.5;
-      color: #333;
-      background-color: #f9f9f9;
+      font-family: var(--font-primary);
+      background-color: var(--color-background);
+      color: var(--color-foreground);
       overflow-x: hidden;
     }
-    main {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 1rem;
+
+    /* HERO / HEADER SECTION WITH GPU-OPTIMIZED BACKGROUND */
+    .hero-section {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      background-color: var(--color-background);
+    }
+    /* Animated shapes in the hero background */
+    .animated-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 0;
+    }
+    .shape {
+      position: absolute;
+      background: var(--color-accent);
+      opacity: 0.15;
+      border-radius: 50%;
+      mix-blend-mode: screen;
+      transform: translate3d(0, 0, 0);
+      animation: floatShapes 10s infinite ease-in-out alternate;
+    }
+    @keyframes floatShapes {
+      0% {
+        transform: translate3d(0, 0, 0) scale(1) rotate(0deg);
+      }
+      50% {
+        transform: translate3d(50px, -50px, 0) scale(1.3) rotate(45deg);
+      }
+      100% {
+        transform: translate3d(-50px, 50px, 0) scale(1.1) rotate(-45deg);
+      }
+    }
+    .shape-1 {
+      width: 300px;
+      height: 300px;
+      top: 10%;
+      left: 15%;
+      animation-duration: 12s;
+    }
+    .shape-2 {
+      width: 400px;
+      height: 400px;
+      top: 50%;
+      left: 60%;
+      animation-duration: 15s;
+    }
+    .shape-3 {
+      width: 250px;
+      height: 250px;
+      top: 80%;
+      left: 30%;
+      animation-duration: 9s;
     }
 
-    /* Header */
-    header {
-      text-align: center;
-      padding: 2rem 1rem;
-      background-color: #eee;
+    /* HERO CONTENT */
+    .hero-content {
+      z-index: 1;
+      max-width: 80%;
     }
-    header h1 {
+    .hero-title {
+      font-family: var(--font-secondary);
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      letter-spacing: 1px;
+    }
+    .hero-subtitle {
+      font-family: var(--font-primary);
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      line-height: 1.5;
+      color: rgba(255, 255, 255, 0.8);
+    }
+    .cta-button {
+      background-color: var(--color-accent);
+      color: #000;
+      padding: 0.75rem 2rem;
+      border: none;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform var(--transition-speed), background-color var(--transition-speed);
+      font-weight: 500;
+    }
+    .cta-button:hover {
+      background-color: #fff68f;
+      transform: scale(1.05);
+    }
+
+    /* SECTION BASE STYLES */
+    section {
+      padding: 4rem 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .section-title {
+      font-family: var(--font-secondary);
       font-size: 2rem;
-      margin-bottom: 0.5rem;
-      color: #444;
-    }
-    header p {
-      font-size: 1.1rem;
-      color: #666;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    /* Hero Section */
-    .hero {
-      text-align: center;
-      padding: 2rem 1rem;
-      background-color: #fff;
-      margin: 1rem 0;
-      border-left: 4px solid #ccc;
-      border-right: 4px solid #ccc;
-    }
-    .hero p {
-      font-size: 1rem;
-      color: #555;
-      max-width: 800px;
-      margin: 1rem auto;
-    }
-
-    /* About Section */
-    #about {
-      background-color: #fafafa;
-      padding: 2rem;
-      margin: 1rem 0;
-      text-align: center;
-    }
-    #about h2 {
-      font-size: 1.75rem;
-      margin-bottom: 1rem;
-      color: #444;
-    }
-    #about p {
-      max-width: 800px;
-      margin: 0 auto;
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #555;
-    }
-
-    /* Gallery Section */
-    #gallery {
-      padding: 2rem;
-      margin: 1rem 0;
-      text-align: center;
-      background-color: #fff;
-    }
-    #gallery h2 {
-      font-size: 1.75rem;
-      color: #444;
-      margin-bottom: 0.5rem;
-    }
-    #gallery h3 {
-      font-size: 1.25rem;
-      color: #666;
       margin-bottom: 1rem;
     }
-    #gallery p {
-      max-width: 800px;
-      margin: 0 auto 2rem auto;
-      color: #555;
+    .section-subtitle {
       font-size: 1rem;
-      line-height: 1.6;
+      max-width: 600px;
+      color: rgba(255, 255, 255, 0.7);
+      margin-bottom: 2rem;
+      line-height: 1.5;
     }
-    /* (Optional) Image grid styling can be added here if needed. */
-
-    /* Custom Inquiry Section */
-    #custom-inquiry {
-      background-color: #fafafa;
-      padding: 2rem;
-      margin: 1rem 0;
-      text-align: center;
+    /* Fade-in animation on scroll */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 1s ease, transform 1s ease;
     }
-    #custom-inquiry h2 {
-      font-size: 1.5rem;
-      color: #444;
-      margin-bottom: 1rem;
-    }
-    #custom-inquiry p {
-      max-width: 800px;
-      margin: 0 auto;
-      color: #555;
-      font-size: 1rem;
-      line-height: 1.6;
+    .fade-in.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
-    /* Footer */
+    /* FOOTER */
     footer {
-      background-color: #eee;
-      padding: 1.5rem;
+      background-color: #111;
+      padding: 2rem;
       text-align: center;
-      margin-top: 2rem;
     }
-    footer p {
-      color: #666;
+    .footer-text {
       font-size: 0.9rem;
-      margin-bottom: 0.5rem;
+      color: rgba(255, 255, 255, 0.5);
+      margin-bottom: 1rem;
     }
-    .social-links {
-      margin: 0.5rem 0;
-    }
-    .social-links a {
-      margin: 0 0.25rem;
-      color: #333;
+    .footer-links a {
+      margin: 0 0.4rem;
+      color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
-      font-size: 1rem;
+      transition: color 0.3s;
     }
-    .contact-info {
-      margin-top: 0.5rem;
-      font-size: 0.9rem;
-      color: #555;
+    .footer-links a:hover {
+      color: var(--color-accent);
     }
 
-    /* Rebate Prompt / Refinement Instruction */
-    .rebate-section {
-      border: 2px dashed #ccc;
-      padding: 1rem;
-      margin: 2rem 0;
-      font-size: 0.95rem;
-      background-color: #fff;
-    }
-    .rebate-section h4 {
-      margin-bottom: 0.5rem;
-      font-size: 1rem;
-      color: #444;
-    }
-    .rebate-section p {
-      margin-bottom: 0.5rem;
-      line-height: 1.4;
-      color: #555;
-    }
-    .rebate-section code {
-      background-color: #f2f2f2;
-      padding: 0.15rem 0.3rem;
-      margin: 0 0.1rem;
-      font-family: monospace;
+    /* RESPONSIVE */
+    @media (max-width: 768px) {
+      .hero-title {
+        font-size: 1.8rem;
+      }
+      .hero-subtitle {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
-
 <body>
-  <main>
-    <!-- Website Header -->
-    <header>
-      <h1>Hoover Art - The Fusion of Nature, Fantasy, and Feminine Beauty</h1>
-      <p>Explore the mesmerizing digital artistry of Floris van den Hoever, combining nature and fantasy in breathtaking female portraits.</p>
-    </header>
+  <!-- HERO (HEADER) SECTION -->
+  <header class="hero-section">
+    <!-- Animated background -->
+    <div class="animated-bg">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="shape shape-3"></div>
+    </div>
 
-    <!-- Hero Section -->
-    <section class="hero">
-      <p>
-        Hoover Art, led by Floris van den Hoever, a renowned digital artist from the Netherlands and Ireland, 
-        creates evocative female portrait art infused with elements of nature and fantasy. 
-        With mastery over tools like 3D, Dash, Studio, and Photoshop, Hoover Art delivers custom artworks 
-        that capture the soul of femininity, complemented by delicate touches of nature, feathers, and animals.
+    <div class="hero-content">
+      <!-- Replace original text with the new header info -->
+      <h1 class="hero-title">Hoover Art - The Fusion of Nature, Fantasy, and Feminine Beauty</h1>
+      <p class="hero-subtitle">
+        Explore the mesmerizing digital artistry of Floris van den Hoever, combining nature and fantasy in breathtaking female portraits.
       </p>
-    </section>
+      <button class="cta-button" onclick="scrollToSection('hero')">Learn More</button>
+    </div>
+  </header>
 
-    <!-- About Section -->
-    <section id="about">
-      <h2>Meet the Artist</h2>
-      <p>
-        Floris van den Hoever, the visionary behind Hoover Art, merges his passion for digital artistry 
-        with his deep appreciation for nature. His works transport viewers into ethereal realms where fantasy 
-        and reality intertwine, featuring stunning female portraits adorned with natural elements. Combining 
-        modern tools like 3D design software, Dash, Studio, and Photoshop, Floris redefines contemporary 
-        digital art. Born and raised in the Netherlands with roots in Ireland, Floris’s art reflects his 
-        multicultural heritage and artistic ingenuity.
-      </p>
-    </section>
+  <!-- HERO-LIKE SECTION (renamed for clarity, but can be combined if desired) -->
+  <!-- Replaces the "Hero" text from prior code with new descriptive text -->
+  <section id="hero" class="fade-in">
+    <p class="section-subtitle" style="max-width: 700px; margin: 0 auto; color: #ccc;">
+      Hoover Art, led by Floris van den Hoever, a renowned digital artist from the Netherlands and Ireland, 
+      creates evocative female portrait art infused with elements of nature and fantasy. 
+      With mastery over tools like 3D, Dash, Studio, and Photoshop, Hoover Art delivers 
+      custom artworks that capture the soul of femininity, complemented by delicate touches of nature, 
+      feathers, and animals.
+    </p>
+  </section>
 
-    <!-- Art Gallery Section -->
-    <section id="gallery">
-      <h2>Explore Our Collections</h2>
-      <h3>A Showcase of Nature-Inspired Female Portraits</h3>
-      <p>
-        Each artwork from Hoover Art tells a story. Delicate feathers, intricate animals, 
-        and breathtaking landscapes intertwine with the beauty of femininity, 
-        creating captivating pieces of art. Browse our gallery to experience the 
-        harmony between fantasy and nature.
-      </p>
-      <!-- (Optional) Insert gallery images or placeholders here. -->
-    </section>
+  <!-- ABOUT SECTION -->
+  <section id="about" class="fade-in">
+    <h2 class="section-title">Meet the Artist</h2>
+    <p class="section-subtitle">
+      Floris van den Hoever, the visionary behind Hoover Art, merges his passion for digital artistry 
+      with his deep appreciation for nature. His works transport viewers into ethereal realms 
+      where fantasy and reality intertwine, featuring stunning female portraits adorned 
+      with natural elements. Combining modern tools like 3D design software, Dash, Studio, 
+      and Photoshop, Floris redefines contemporary digital art. Born and raised in the Netherlands 
+      with roots in Ireland, Floris’s art reflects his multicultural heritage and artistic ingenuity.
+    </p>
+  </section>
 
-    <!-- Custom Inquiry Section -->
-    <section id="custom-inquiry">
-      <h2>Commission Your Own Artwork</h2>
-      <p>
-        Looking for a unique piece of art? Hoover Art offers custom inquiries to bring your vision to life. 
-        Whether it's a portrait combined with natural elements or a fantasy-inspired design, 
-        Floris van den Hoever works closely with clients to create personalized masterpieces.
-      </p>
-    </section>
+  <!-- GALLERY SECTION (renamed from #showcase to #gallery) -->
+  <section id="gallery" class="fade-in">
+    <h2 class="section-title">Explore Our Collections</h2>
+    <h3 style="font-family: var(--font-primary); font-size:1.25rem; color: #ccc; margin-bottom: 1.5rem;">
+      A Showcase of Nature-Inspired Female Portraits
+    </h3>
+    <p class="section-subtitle">
+      Each artwork from Hoover Art tells a story. Delicate feathers, intricate animals, 
+      and breathtaking landscapes intertwine with the beauty of femininity, 
+      creating captivating pieces of art. Browse our gallery to experience the 
+      harmony between fantasy and nature.
+    </p>
 
-    <!-- Footer Section -->
-    <footer>
-      <p>
-        Hoover Art © <span id="year"></span> | Digital Art by Floris van den Hoever | Nature Meets Fantasy | All Rights Reserved.
-      </p>
-      <div class="social-links">
-        <!-- Social Media Links / Icons -->
-        <a href="#" target="_blank" rel="noopener">Facebook</a>|
-        <a href="#" target="_blank" rel="noopener">Instagram</a>|
-        <a href="#" target="_blank" rel="noopener">Twitter</a>
-      </div>
-      <div class="contact-info">
-        For inquiries, reach us at <a href="mailto:contact@hooverart.com">contact@hooverart.com</a>
-      </div>
-    </footer>
+    <!-- (Optional) You can keep or remove any existing placeholders or images here -->
+    <!-- Example placeholder gallery items could be inserted below -->
+  </section>
 
-    <!-- Rebate Prompt for Refinements -->
-    <section class="rebate-section">
-      <h4>Refine Website Text</h4>
-      <p>
-        When refining text, replace existing headers, paragraphs, or descriptions 
-        with updated content while preserving the professional tone, grammar, 
-        and overall artistic essence of the website.
-      </p>
-      <p>
-        <strong>Example Instruction:</strong> 
-        <code>Replace the About Section heading and paragraph with new text featuring the keyword "Golden Fantasy."</code>
-      </p>
-    </section>
-  </main>
+  <!-- CUSTOM INQUIRY SECTION -->
+  <section id="custom-inquiry" class="fade-in">
+    <h2 class="section-title">Commission Your Own Artwork</h2>
+    <p class="section-subtitle">
+      Looking for a unique piece of art? Hoover Art offers custom inquiries to bring your vision to life. 
+      Whether it's a portrait combined with natural elements or a fantasy-inspired design, 
+      Floris van den Hoever works closely with clients to create personalized masterpieces.
+    </p>
+  </section>
 
-  <!-- Simple JavaScript to update the year automatically -->
+  <!-- FOOTER SECTION -->
+  <footer>
+    <p class="footer-text">
+      Hoover Art © <span id="year"></span> | Digital Art by Floris van den Hoever | Nature Meets Fantasy | All Rights Reserved.
+    </p>
+    <div class="footer-links">
+      <!-- Social Media Links (Placeholder) -->
+      <a href="#" target="_blank" rel="noopener">Facebook</a>
+      <a href="#" target="_blank" rel="noopener">Instagram</a>
+      <a href="#" target="_blank" rel="noopener">Twitter</a>
+    </div>
+    <p class="footer-text">For inquiries, reach us at <a href="mailto:contact@hooverart.com" style="color: var(--color-accent);">contact@hooverart.com</a></p>
+  </footer>
+
+  <!-- REBATE PROMPT FOR REFINEMENTS -->
+  <section style="border: 2px dashed #666; margin: 2rem; padding: 1rem;" class="fade-in">
+    <h3 style="font-family: var(--font-secondary); margin-bottom: 0.5rem;">Refine Website Text</h3>
+    <p style="font-family: var(--font-primary); max-width: 700px; margin: 0 auto;">
+      When refining text, replace existing headers, paragraphs, or descriptions with updated content 
+      while preserving the professional tone, grammar, and overall artistic essence of the website.
+    </p>
+    <p style="font-size: 0.9rem; color: #bbb; margin-top: 0.5rem;">
+      <strong>Example Instruction:</strong> 
+      <code>Replace the About Section heading and paragraph with new text featuring the keyword "Golden Fantasy."</code>
+    </p>
+  </section>
+
+  <!-- JS: Auto-set year and fade-in animations -->
   <script>
+    // Dynamically set the year in the footer
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Smooth scroll to a specific section
+    function scrollToSection(sectionId) {
+      document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
+    }
+
+    // Intersection Observer for fade-in effects
+    const fadeInElements = document.querySelectorAll('.fade-in');
+    const observerOptions = { threshold: 0.1 };
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, observerOptions);
+
+    fadeInElements.forEach(el => observer.observe(el));
   </script>
 </body>
 </html>
